# case-study

./: README.md
cpp/parser/: CMakeLists.txt  README.md
cpp/parser/src/: loggable.h  logger.cc  logger.h  parser.cc  parser.h
cpp/parser/test/: test_parser.cpp
